--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "example"
+name = "skyexample"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-procmacro = { path = "../procmacro" }
+procmacro = { path = "../macro" }
 lambda_http = "0.13.0"
 tokio = "1.42.0"
