--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = "1.5.11"
+aws-sdk-dynamodb = "1.56.0"
 aws_lambda_events = "0.16.0"
 lambda_runtime = "0.13.0"
 skymacro = { path = "../macro" }
