--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 eyre = "0.6.12"
 regex = "1.11.1"
-syn = "2.0.90"
+syn = "2.0.91"
+serde_json = "1.0.134"
+serde = { version = "1.0", features = ["derive"] }
 prettyplease = "0.2.25"
 toml = { workspace = true }
 
