--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-sdk-secretsmanager = "1.57.0"
+aws-sdk-ssm = "1.59.0"
 uuid = { version = "1.11.0", features = ["v4"]}
 clap = {version = "4.5.23", features = ["derive"]}
 eyre = "0.6.12"
