--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -8,6 +8,7 @@ aws-sdk-ssm = "1.59.0"
 uuid = { version = "1.11.0", features = ["v4"]}
 clap = {version = "4.5.23", features = ["derive"]}
 eyre = "0.6.12"
+regex = "1.11.1"
 walkdir = "2.5.0"
 zip = "2.2.2"
 aws-sdk-s3 = "1.66.0"
