--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,3 +17,6 @@ tokio = {version = "1.43.0", features = ["full"]}
 aws-sdk-cloudformation = "1.62.0"
 toml = { workspace = true }
 rust_dotenv = "0.1.2"
+reqwest = { version = "0.12.12", features = ["json"]}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.137"
