--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,3 +20,4 @@ rust_dotenv = "0.1.2"
 reqwest = { version = "0.12.12", features = ["json"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.137"
+backend = { path = "../backend" }
