--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,12 +5,18 @@ edition = "2021"
 
 [dependencies]
 lambda_http = "0.14.0"
+uuid = { version = "1.12.1", features = ["v4"]}
 lambda_runtime = "0.13.0"
 skymacro = { path = "../macro" }
 aws-config = "1.5.15"
 aws-sdk-s3 = "1.71.0"
 eyre = "0.6.12"
 serde_json = "1.0.137"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8.19"
+zip = "2.2.2"
+aws-sdk-ssm = "1.62.1"
+regex = "1.11.1"
 
 [package.metadata.sky.stack]
 name = "kinetics-backend"
