--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 aws-sdk-ssm = "1.62.1"
+chrono = { version = "0.4.39", features = ["serde"]}
 uuid = { version = "1.12.1", features = ["v4"]}
 clap = {version = "4.5.27", features = ["derive"]}
 eyre = "0.6.12"
