--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,6 +24,7 @@ chrono = "0.4.39"
 rand = "0.8.5"
 reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
 sha256 = "1.5.0"
+magic-crypt = "4.0.1"
 
 [package.metadata.sky.stack]
 name = "kinetics-backend"
