--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ toml = "0.8.19"
 [workspace]
 resolver = "2"
 
-members = [ "backend",
+members = [
+    "backend",
     "cli",
     "example",
     "macro",
