--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,20 +5,23 @@ edition = "2021"
 
 [dependencies]
 aws-sdk-ssm = "1.62.1"
-chrono = { version = "0.4.39", features = ["serde"]}
-uuid = { version = "1.12.1", features = ["v4"]}
-clap = {version = "4.5.27", features = ["derive"]}
+chrono = { version = "0.4.39", features = ["serde"] }
+uuid = { version = "1.12.1", features = ["v4"] }
+clap = { version = "4.5.27", features = ["derive"] }
 eyre = "0.6.12"
 regex = "1.11.1"
 walkdir = "2.5.0"
 zip = "2.2.2"
 aws-sdk-s3 = "1.71.0"
 aws-config = "1.5.15"
-tokio = {version = "1.43.0", features = ["full"]}
+tokio = { version = "1.43.0", features = ["full"] }
 aws-sdk-cloudformation = "1.62.0"
 toml = { workspace = true }
+toml_edit = "0.22.24"
 rust_dotenv = "0.1.2"
-reqwest = { version = "0.12.12", features = ["json"]}
+reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.137"
 backend = { path = "../backend" }
+syn = { version = "2.0", features = ["full", "visit"] }
+prettyplease = "0.2.29"
