--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,7 @@ aws-sdk-cloudformation = "1.66.0"
 lambda_http = "0.14.0"
 uuid = { version = "1.13.1", features = ["v4"]}
 lambda_runtime = "0.13.0"
-skymacro = { path = "../macro" }
+kinetics-macro = { path = "../macro" }
 aws-config = "1.5.16"
 aws-sdk-s3 = "1.76.0"
 eyre = "0.6.12"
