--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "skyexample"
+name = "kinetics-example"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,7 +8,7 @@ aws-config = "1.5.15"
 aws-sdk-dynamodb = "1.62.0"
 aws_lambda_events = "0.16.0"
 lambda_runtime = "0.13.0"
-skymacro = { path = "../macro" }
+kinetics-macro = { path = "../macro" }
 lambda_http = "0.14.0"
 tokio = "1.43.0"
 
