--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = "1.0.137"
 backend = { path = "../backend" }
 syn = { version = "2.0", features = ["full", "visit"] }
 prettyplease = "0.2.29"
+futures = "0.3.31"
