--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -26,5 +26,5 @@ reqwest = { version = "0.12.12", default-features = false, features = ["rustls-t
 sha256 = "1.5.0"
 magic-crypt = "4.0.1"
 
-[package.metadata.sky.kvdb.kinetics]
+[package.metadata.kinetics.kvdb.kinetics]
 name = "kinetics"
