--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 aws-sdk-cloudformation = "1.66.0"
 lambda_http = "0.14.0"
-uuid = { version = "1.13.2", features = ["v4"]}
+uuid = { version = "1.13.2", features = ["v4"] }
 lambda_runtime = "0.13.0"
 kinetics-macro = { path = "../macro" }
 aws-config = "1.5.16"
@@ -25,6 +25,7 @@ rand = "0.9.0"
 reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
 sha256 = "1.5.0"
 magic-crypt = "4.0.1"
+itertools = "0.14.0"
 
 [package.metadata.kinetics.kvdb.kinetics]
 name = "kinetics"
