--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 aws-sdk-cloudformation = "1.66.0"
+aws-sdk-cloudwatch = "1.65.0"
 lambda_http = "0.14.0"
 uuid = { version = "1.13.2", features = ["v4"] }
 lambda_runtime = "0.13.0"
@@ -20,7 +21,7 @@ aws-sdk-ssm = "1.65.0"
 regex = "1.11.1"
 aws-sdk-dynamodb = "1.65.0"
 serde-email = "3.1.0"
-chrono = "0.4.39"
+chrono = { version = "0.4.39", features = ["serde"] }
 rand = "0.9.0"
 reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
 sha256 = "1.5.0"
