--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -27,3 +27,6 @@ syn = { version = "2.0", features = ["full", "visit"] }
 prettyplease = "0.2.29"
 twox-hash = "2.1.0"
 futures = "0.3.31"
+indicatif = "0.17.11"
+console = "0.15.10"
+color-eyre = "0.6.3"
