Fix cloud front template Now it can be deployed to any account according to the config

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 aws-sdk-cloudformation = "1.66.0"
+aws-sdk-sts = "1.61.0"
 lambda_http = "0.14.0"
 uuid = { version = "1.13.2", features = ["v4"] }
 lambda_runtime = "0.13.0"
