--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,15 +12,13 @@ aws-sdk-resourcegroupstagging = "1.62.0"
 aws-sdk-sts = "1.63.0"
 lambda_http = "0.14.0"
 uuid = { version = "1.16.0", features = ["v4"] }
-lambda_runtime = "0.13.0"
-kinetics-macro = { path = "../macro" }
+kinetics-macro = { path = "../../kinetics/macro" }
 aws-config = "1.6.0"
 aws-sdk-s3 = "1.79.0"
 eyre = "0.6.12"
 serde_json = "1.0.140"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8.20"
-zip = "2.4.1"
 aws-sdk-ssm = "1.68.0"
 regex = "1.11.1"
 aws-sdk-dynamodb = "1.69.0"
