--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,30 +4,30 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-sdk-sqs = "1.62.0"
+aws-config = "1.6.0"
 aws-sdk-cloudformation = "1.69.0"
 aws-sdk-cloudwatch = "1.68.0"
+aws-sdk-dynamodb = "1.69.0"
 aws-sdk-lambda = "1.72.0"
 aws-sdk-resourcegroupstagging = "1.62.0"
-aws-sdk-sts = "1.63.0"
-lambda_http = "0.14.0"
-uuid = { version = "1.16.0", features = ["v4"] }
-kinetics-macro = { path = "../../kinetics/macro" }
-aws-config = "1.6.0"
 aws-sdk-s3 = "1.79.0"
-eyre = "0.6.12"
-serde_json = "1.0.140"
-serde = { version = "1.0", features = ["derive"] }
-toml = "0.8.20"
+aws-sdk-sqs = "1.62.0"
 aws-sdk-ssm = "1.68.0"
-regex = "1.11.1"
-aws-sdk-dynamodb = "1.69.0"
-serde-email = "3.1.0"
+aws-sdk-sts = "1.63.0"
 chrono = { version = "0.4.40", features = ["serde"] }
-rand = "0.9.0"
-reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
-sha256 = "1.6.0"
+eyre = "0.6.12"
+kinetics-macro = { path = "../../kinetics/macro" } # TODO Use feature flag to use local or published version of the macro
+lambda_http = "0.14.0"
 magic-crypt = "4.0.1"
+rand = "0.9.0"
+regex = "1.11.1"
+reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde-email = "3.1.0"
+serde_json = "1.0.140"
+sha256 = "1.6.0"
+toml = { workspace = true }
+uuid = { version = "1.16.0", features = ["v4"] }
 
 [package.metadata.kinetics.kvdb.kinetics]
 name = "kinetics"
