--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,18 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-sdk-ssm = "1.68.0"
+aws-sdk-ssm = "1.71.0"
 chrono = { version = "0.4.40", features = ["serde"] }
 uuid = { version = "1.16.0", features = ["v4"] }
-clap = { version = "4.5.32", features = ["derive"] }
+clap = { version = "4.5.35", features = ["derive"] }
 eyre = "0.6.12"
 regex = "1.11.1"
 walkdir = "2.5.0"
-zip = "2.4.1"
-aws-sdk-s3 = "1.79.0"
-aws-config = "1.6.0"
-tokio = { version = "1.44.1", features = ["full"] }
-aws-sdk-cloudformation = "1.69.0"
+zip = "2.6.1"
+aws-sdk-s3 = "1.82.0"
+aws-config = "1.6.1"
+tokio = { workspace = true, features = [ "full" ] }
+aws-sdk-cloudformation = "1.71.0"
 toml = { workspace = true }
 toml_edit = "0.22.24"
 rust_dotenv = "0.1.2"
@@ -24,10 +24,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
 backend = { path = "../backend" }
 syn = { version = "2.0", features = ["full", "visit"] }
-prettyplease = "0.2.31"
+prettyplease = "0.2.32"
 twox-hash = "2.1.0"
 futures = "0.3.31"
 indicatif = "0.17.11"
 console = "0.15.11"
 color-eyre = "0.6.3"
-crossterm = "0.28.1"
+crossterm = "0.29.0"
