--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -22,7 +22,6 @@ rust_dotenv = "0.1.2"
 reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
-backend = { path = "../backend" }
 syn = { version = "2.0", features = ["full", "visit"] }
 prettyplease = "0.2.32"
 twox-hash = "2.1.0"
@@ -31,3 +30,11 @@ indicatif = "0.17.11"
 console = "0.15.11"
 color-eyre = "0.6.3"
 crossterm = "0.29.0"
+
+[features]
+enable-direct-deploy = ["backend"]
+
+[dependencies.backend]
+optional = true
+path = "../../kinetics-backend/backend" # WARN Requires a specific directory structure
+version = "0.1"
