--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-aws-sdk-ssm = "1.71.0"
 chrono = { version = "0.4.40", features = ["serde"] }
 uuid = { version = "1.16.0", features = ["v4"] }
 clap = { version = "4.5.35", features = ["derive"] }
@@ -15,7 +14,6 @@ zip = "2.6.1"
 aws-sdk-s3 = "1.82.0"
 aws-config = "1.6.1"
 tokio = { workspace = true, features = [ "full" ] }
-aws-sdk-cloudformation = "1.71.0"
 toml = { workspace = true }
 toml_edit = "0.22.24"
 rust_dotenv = "0.1.2"
@@ -30,11 +28,7 @@ indicatif = "0.17.11"
 console = "0.15.11"
 color-eyre = "0.6.3"
 crossterm = "0.29.0"
+common  = { path = "../common" }
 
 [features]
-enable-direct-deploy = ["backend"]
-
-[dependencies.backend]
-optional = true
-path = "../../kinetics-backend/backend" # WARN Requires a specific directory structure
-version = "0.1"
+enable-direct-deploy = []
