--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -29,6 +29,8 @@ console = "0.15.11"
 color-eyre = "0.6.3"
 crossterm = "0.29.0"
 common  = { path = "../common" }
+log = "0.4.27"
+env_logger = "0.11.8"
 
 [features]
 enable-direct-deploy = []
