Add support for custom direct deployments
Introduced a `DirectDeploy` trait to enable custom deploy logic and included a `supercli` crate for CLI extension. The feature can be toggled with `enable-direct-deploy`, defaulting to a placeholder deploy plug if not specified. Adjusted pipeline and function modules to support conditional deployment paths.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -28,3 +28,7 @@ indicatif = "0.17.11"
 console = "0.15.11"
 color-eyre = "0.6.3"
 crossterm = "0.29.0"
+async-trait = "0.1.88"
+
+[features]
+enable-direct-deploy = []
