--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = "1.6.1"
+aws-sdk-dynamodb = "1.71.2"
 chrono = { version = "0.4.40", features = ["serde"] }
 uuid = { version = "1.16.0", features = ["v4"] }
 clap = { version = "4.5.37", features = ["derive"] }
