Validate macro attributes
Move the code in cli/buld/parser to a common crate, in order to reuse its login in the macro.

--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+syn = "2.0.90"
+kinetics-parser = { path = "../parser" }
 
 [lib]
 proc-macro = true
