--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,4 @@ tokio = "1.44.2"
 [workspace]
 resolver = "2"
 
-members = [
-    "cli",
-    "example",
-    "macro",
-]
+members = ["cli", "example", "macro", "parse"]
