--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ tokio = "1.44.2"
 [workspace]
 resolver = "2"
 
-members = ["cli", "example", "macro", "parse"]
+members = ["cli", "example", "macro", "parser"]
