--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -27,7 +27,7 @@ tokio = { workspace = true, features = ["full"] }
 toml = { workspace = true }
 toml_edit = "0.22.26"
 rust_dotenv = "0.1.2"
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
 syn = { version = "2.0", features = ["full", "visit"] }
