--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 syn = "2.0.101"
-kinetics-parser = { path = "../parser" }
+kinetics-parser = { path = "../parser", version = "0.2.1" }
 
 [lib]
 proc-macro = true
