Add more examples and structure in a better way

--- a/example/.env.secrets
+++ b/example/.env.secrets
@@ -1,2 +1,1 @@
-API_KEY=VZoM^z!v5k6yQfG$$Vxo*L9wkQK6YogZWrki
-ANOTHER_API_KEY=AfHFaYGhfLFGgsl!@5
+SECRET_API_KEY=VZoM^z!v5k6yQfG$$Vxo*L9wkQK6YogZWrki
