--- a/example/Cargo.toml
+++ b/example/Cargo.toml
@@ -12,6 +12,7 @@ kinetics-macro = { path = "../macro" }
 lambda_http = "0.14.0"
 tokio = "1.45.0"
 aws-sdk-sqs = "1.66.0"
+serde_json = { version = "1.0.140", features = ["default"] }
 
 [package.metadata.kinetics.kvdb.users]
-name = "users"
+name = "mytable"
