--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ tokio = "1.45.0"
 [workspace]
 resolver = "2"
 
-members = ["cli", "example", "macro", "parser"]
+members = ["cli", "examples", "macro", "parser"]
