--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace.dependencies]
+# Do not upgrade as TOML parsing fails
 toml = "0.8.23"
-tokio = "1.46.1"
+
+tokio = "1.47.0"
 
 [workspace]
 resolver = "2"
