--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,24 +14,27 @@ name = "kinetics"
 path = "src/main.rs"
 
 [dependencies]
-aws-config = "1.8.1"
-aws-sdk-dynamodb = "1.82.0"
+aws-config = "1.8.3"
+aws-sdk-dynamodb = "1.86.0"
 chrono = { version = "0.4.41", features = ["serde"] }
 uuid = { version = "1.17.0", features = ["v4"] }
-clap = { version = "4.5.40", features = ["derive"] }
+clap = { version = "4.5.42", features = ["derive"] }
 eyre = "0.6.12"
 regex = "1.11.1"
 walkdir = "2.5.0"
+
+# Do not upgrade as compilation fails
 zip = "4.2.0"
+
 tokio = { workspace = true, features = ["full"] }
 toml = { workspace = true }
-toml_edit = "0.22.27"
+toml_edit = "0.23.2"
 rust_dotenv = "0.1.2"
 reqwest = { version = "0.12.22", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.140"
+serde_json = "1.0.141"
 syn = { version = "2.0", features = ["full", "visit"] }
-prettyplease = "0.2.35"
+prettyplease = "0.2.36"
 twox-hash = "2.1.1"
 futures = "0.3.31"
 indicatif = "0.18.0"
