--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -11,3 +11,4 @@ categories = ["parsing"]
 [dependencies]
 syn = { version = "2.0", features = ["full", "visit"] }
 color-eyre = "0.6.5"
+walkdir = "2.5.0"
