--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,8 +11,8 @@ aws-config = "1.8.3"
 aws-sdk-dynamodb = "1.86.0"
 aws_lambda_events = "0.17.0"
 lambda_runtime = "0.14.3"
-kinetics-macro = { path = "../macro" }
-kinetics = { path = "../cli" }
+kinetics-macro = "0.7.2"
+kinetics = "0.7.2"
 lambda_http = "0.16.0"
 tokio = "1.47.1"
 aws-sdk-sqs = "1.78.0"
