--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,7 +33,11 @@ tokio = { workspace = true, features = ["full"] }
 toml = { workspace = true }
 toml_edit = "0.23.2"
 rust_dotenv = "0.1.2"
-reqwest = { version = "0.12.22", features = ["json", "blocking", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12.22", features = [
+  "json",
+  "blocking",
+  "rustls-tls",
+], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.142"
 syn = { version = "2.0", features = ["full", "visit"] }
