--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 aws-config = "1.8.3"
 aws-sdk-dynamodb = "1.86.0"
 aws-sdk-sqs = "=1.80.0"
-aws_lambda_events = "0.17.0"
+aws_lambda_events = "^0"
 chrono = { version = "0.4.41", features = ["serde"] }
 uuid = { version = "1.17.0", features = ["v4"] }
 clap = { version = "4.5.42", features = ["derive"] }
@@ -58,3 +58,8 @@ lambda_runtime = "0.14.3"
 crc-fast = "1.4.0"
 base64 = "0.22.1"
 sha256 = "1.6.0"
+bytes = "^1.0"
+http = "^1.0"
+http-body = "^1.0"
+lambda_http = "^0"
+tower = "^0"
