Add postgres sqlx example

--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [package.metadata.kinetics.kvdb.users]
 name = "mytable"
 
+[package.metadata.kinetics.sqldb.mydb]
+name = "mydb"
+
 [dependencies]
 aws-config = "1.8.3"
 aws-sdk-dynamodb = "1.86.0"
@@ -16,3 +19,4 @@ tokio = "1.47.1"
 tower = "^0"
 aws-sdk-sqs = "1.78.0"
 serde_json = { version = "1.0.142", features = ["default"] }
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
