--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,7 +11,7 @@ aws-config = "1.8.8"
 aws-sdk-dynamodb = "1.95.0"
 http = "^1.0"
 lambda_runtime = "0.14.4"
-kinetics = "0.9.2"
+kinetics = { path = "/Users/sabio/otto/sky/cli/"}
 tokio = "1.48.0"
 tower = "^0"
 aws-sdk-sqs = "1.86.0"
