--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -9,8 +9,11 @@ keywords = ["kinetics", "rust", "macro"]
 categories = ["parsing"]
 
 [dependencies]
-syn = "2.0.106"
+syn = {version = "2.0.106", features = ["fold"] }
 kinetics-parser = { path = "../parser", version = "0.9.2" }
+quote = "1.0.41"
+proc-macro2 = "1.0.101"
+heck = "0.5.0"
 
 [lib]
 proc-macro = true
