--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -12,3 +12,4 @@ categories = ["parsing"]
 syn = { version = "2.0", features = ["full", "visit"] }
 color-eyre = "0.6.5"
 walkdir = "2.5.0"
+serde = { version = "1.0.226", features = ["derive"] }
