--- a/cli/src/commands/init/github-workflow-template.yaml
+++ b/cli/src/commands/init/github-workflow-template.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Run kinetics deploy
         env:
           DEPLOY_DIR: PLACEHOLDER_DIR_PATH
-          KINETICS_TOKEN: ${{ secrets.KINETICS_TOKEN }}
+          KINETICS_ACCESS_TOKEN: ${{ secrets.KINETICS_ACCESS_TOKEN }}
         run: |
           cd "${DEPLOY_DIR:-.}"
           kinetics deploy
