--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -65,4 +65,4 @@ lambda_http = "^0"
 tower = "^0"
 percent-encoding = "2.3.2"
 url = "2.5.7"
-sqlx = { version = "0.8.6", features = ["postgres", "chrono", "tls-rustls"] }
+sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
