Deploy in CI/CD with deploy --max-concurrency=1
Alongside remove the pull_request trigger which is not meant for production deploys.

--- a/cli/src/commands/cicd/github-workflow-template.yaml
+++ b/cli/src/commands/cicd/github-workflow-template.yaml
@@ -2,9 +2,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   deploy:
@@ -45,4 +42,4 @@ jobs:
           KINETICS_ACCESS_TOKEN: ${{ secrets.KINETICS_ACCESS_TOKEN }}
         run: |
           cd "${DEPLOY_DIR:-.}"
-          kinetics deploy
+          kinetics deploy --max-concurrency=1
