--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -67,3 +67,4 @@ percent-encoding = "2.3.2"
 url = "2.5.7"
 sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
 sqlparser = "0.60.0"
+once_cell = "1.21.3"
