--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 aws-config = "1.8.8"
 aws-sdk-dynamodb = "1.95.0"
 aws-sdk-sqs = "1.86.0"
-aws-sdk-dsql = "=1.8.0"
+aws-sdk-dsql = "1.48.0"
 aws_lambda_events = "^0"
 chrono = { version = "0.4.42", features = ["serde"] }
 uuid = { version = "1.18.1", features = ["v4"] }
