--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,42 +20,42 @@ aws-sdk-sqs = "1.91.0"
 aws-sdk-dsql = "1.48.0"
 aws_lambda_events = "^0"
 chrono = { version = "0.4.42", features = ["serde"] }
-uuid = { version = "1.18.1", features = ["v4"] }
-clap = { version = "4.5.49", features = ["derive"] }
+uuid = { version = "1.19.0", features = ["v4"] }
+clap = { version = "4.5.54", features = ["derive"] }
 eyre = "0.6.12"
 regex = "1.12.2"
 walkdir = "2.5.0"
 kinetics-macro = { path = "../macro", version = "0.11.7" }
-humantime = "2.1.0"
-zip = "6.0.0"
+humantime = "2.3.0"
+zip = "7.0.0"
 tokio = { workspace = true, features = ["full"] }
 toml = { workspace = true }
-toml_edit = "0.23.7"
-rust_dotenv = "0.1.2"
-reqwest = { version = "0.12.24", features = [
+toml_edit = "0.24.0+spec-1.1.0"
+rust_dotenv = "0.1.3"
+reqwest = { version = "0.13.1", features = [
     "json",
     "blocking",
-    "rustls-tls",
+    "default-tls"
 ], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.149"
 serde_yaml = "0.9.34+deprecated"
 syn = { version = "2.0", features = ["full", "visit"] }
 prettyplease = "0.2.37"
 twox-hash = "2.1.2"
 futures = "0.3.31"
-indicatif = "0.18.0"
-console = "0.16.1"
+indicatif = "0.18.3"
+console = "0.16.2"
 color-eyre = "0.6.5"
 crossterm = "0.29.0"
 async-trait = "0.1.89"
-log = "0.4.28"
+log = "0.4.29"
 env_logger = "0.11.8"
 kinetics-parser = { path = "../parser", version = "0.11.7" }
 tabled = "0.20.0"
 terminal_size = "0.4.3"
-lambda_runtime = "0.14.4"
-crc-fast = "1.5.0"
+lambda_runtime = "1.1.0-rc1"
+crc-fast = "1.10.0"
 base64 = "0.22.1"
 sha256 = "1.6.0"
 bytes = "^1.0"
@@ -64,7 +64,10 @@ http-body = "^1.0"
 lambda_http = "^0"
 tower = "^0"
 percent-encoding = "2.3.2"
-url = "2.5.7"
+url = "2.5.8"
 sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
 sqlparser = "0.60.0"
 once_cell = "1.21.3"
+
+# Explicitly set the version of the lzma-rust2 used in zip, needed to avoid crc crate related errors
+lzma-rust2 = "0.15.6"
