--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.9.2"
 edition = "2021"
 
 [dependencies]
-aws-config = "1.8.8"
-aws-sdk-dynamodb = "1.95.0"
+aws-config = "1.8.12"
+aws-sdk-dynamodb = "1.101.0"
 http = "^1.0"
-lambda_runtime = "0.14.4"
+lambda_runtime = "1.1.0-rc1"
 kinetics = "0.11.7"
-tokio = "1.48.0"
+tokio = "1.49.0"
 tower = "^0"
-aws-sdk-sqs = "1.86.0"
-serde_json = { version = "1.0.145", features = ["default"] }
+aws-sdk-sqs = "1.91.0"
+serde_json = { version = "1.0.149", features = ["default"] }
 sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
-matchit = "0.8.6"
+matchit = "0.9.1"
