--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -54,7 +54,7 @@ env_logger = "0.11.8"
 kinetics-parser = { path = "../parser", version = "0.11.7" }
 tabled = "0.20.0"
 terminal_size = "0.4.3"
-lambda_runtime = "1.1.0-rc1"
+lambda_runtime = "^1.0"
 crc-fast = "1.10.0"
 base64 = "0.22.1"
 sha256 = "1.6.0"
