--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kinetics"
-version = "0.11.8"
+version = "0.11.9"
 edition = "2021"
 description = "Kinetics is a hosting platform for Rust applications that allows you to deploy all types of workloads by writing **only Rust code**."
 license = "Apache-2.0 OR MIT"
@@ -25,7 +25,7 @@ clap = { version = "4.5.54", features = ["derive"] }
 eyre = "0.6.12"
 regex = "1.12.2"
 walkdir = "2.5.0"
-kinetics-macro = { path = "../macro", version = "0.11.8" }
+kinetics-macro = { path = "../macro", version = "0.11.9" }
 humantime = "2.3.0"
 zip = "7.1.0"
 tokio = { workspace = true, features = ["full"] }
@@ -51,11 +51,14 @@ crossterm = "0.29.0"
 async-trait = "0.1.89"
 log = "0.4.29"
 env_logger = "0.11.8"
-kinetics-parser = { path = "../parser", version = "0.11.8" }
+kinetics-parser = { path = "../parser", version = "0.11.9" }
 tabled = "0.20.0"
 terminal_size = "0.4.3"
 lambda_runtime = "^1.0"
-crc-fast = "1.10.0"
+
+# Lock the lower version while as the higher one conflicts with AWD SDK crates
+crc-fast = "=1.6.0"
+
 base64 = "0.22.1"
 sha256 = "1.6.0"
 bytes = "^1.0"
