Use indicatif-log-bridge
The bridge helps avoid interference between progress bars and logs.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -46,6 +46,7 @@ prettyplease = "0.2.37"
 twox-hash = "2.1.2"
 futures = "0.3.31"
 indicatif = "0.18.3"
+indicatif-log-bridge = "0.2.3"
 console = "0.16.2"
 color-eyre = "0.6.5"
 crossterm = "0.29.0"
