--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -34,9 +34,9 @@ toml = { workspace = true }
 toml_edit = "0.24.0+spec-1.1.0"
 rust_dotenv = "0.1.3"
 reqwest = { version = "0.13.1", features = [
-    "json",
-    "blocking",
-    "default-tls"
+  "json",
+  "blocking",
+  "default-tls",
 ], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.149"
@@ -70,6 +70,10 @@ lambda_http = "^1.0"
 tower = "^0"
 percent-encoding = "2.3.2"
 url = "2.5.8"
-sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio-rustls"] }
+sqlx = { version = "0.8.6", features = [
+  "postgres",
+  "chrono",
+  "runtime-tokio-rustls",
+] }
 sqlparser = "0.60.0"
 once_cell = "1.21.3"
