--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -13,3 +13,4 @@ syn = { version = "2.0", features = ["full", "visit"] }
 color-eyre = "0.6.5"
 walkdir = "2.5.0"
 serde = { version = "1.0.228", features = ["derive"] }
+regex = "1.12.3"
